[package]
name = "r2"
version = "0.1.0"
authors = ["nicola <nicola@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
chrono = "0.4"
tempfile = "3"
storage-proofs = "0.3.0"
blake2s_simd = "0.5"
paired = { version = "0.15", features = ["serde"] }
ff = "0.4.0"
hex = "0.3.2"
rand = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
failure = "0.1.5"
futures-preview = "0.3.0-alpha.17"
futures-util-preview = "0.3.0-alpha.17"
pin-utils = "0.1.0-alpha.4"
gperftools = { version = "0.2.0", optional = true }
lru = "0.1.15"
cached = "0.9.0"
crossbeam = "0.7.1"
atomicring = "1.2.2"

[profile.release]
debug = true

[features]
default = []
profile = ["gperftools", "gperftools/heap"]
