[package]
name = "r2"
version = "0.1.0"
authors = ["nicola <nicola@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
chrono = "0.4"
tempfile = "3"
storage-proofs = {git = "https://github.com/filecoin-project/rust-fil-proofs/"}
blake2s_simd = "0.5"
paired = { version = "0.15", features = ["serde"] }
ff = "0.4.0"
hex = "0.3.2"
rand = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
merkletree = "=0.10"
rayon = "1.0.0"
bellperson = "0.3"
fil-sapling-crypto = "0.1.2"